java_opts et tomcat_lang_opts