@@ -8,7 +8,9 @@ FreeBSD & Debian, tomcat 8/9, jdk8, memcache sessions, remoteipvalve support
 
 * `classpath_adds` ('')
   jar's list to be added, column-separated (:)
-* `tomcat_java_opts` ('')
+* `tomcat_java_opts` ('-Djava.awt.headless=true -XX:+UseConcMarkSweepGC -Xms1024m -Xmx1024m')
+  additional java command args
+* `tomcat_lang_opts` ('')
   additional java command args
 * `tomcat_http_port` (8080)
   http port
@@ -49,8 +51,10 @@ Session are replicated between memcache instances on each tomcat host
 Using https://github.com/magro/memcached-session-manager/wiki
 
 * `memcached_nodes` has to be filled as this:
-<code><pre>memcached_nodes: 'japps3:japps3.serv.int:11211,japps4:japps4.serv.int:11211'</pre></code>
-* node names (here japps3/japps4) *MUST* match inventory `inventory_hostname`
+  <code><pre>memcached_nodes: 'japps3:japps3.serv.int:11211,japps4:japps4.serv.int:11211'</pre></code>
+  node names (here japps3/japps4) *MUST* match inventory `inventory_hostname`
+* `tomcat_memcached_sticky (True)`
+  If set to false, enable non-sticky synchronous sessions
 
 (see templates/context.xml.j2)
 
